K8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
  type: NodePort
